demoapp/operators/alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - name: alb-ingress-controller
        args:
        - --ingress-class=alb
        - --cluster-name=fuseterraform-eks-dev
        - --aws-vpc-id=vpc-01d4cacce3edc0627
        - --aws-region=eu-west-1
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.7
      serviceAccountName: alb-ingress-controller
